# SimulStreaming

./: .dockerignore  .gitignore  CLAUDE.md  CPU_TEST_RESULTS.txt  Dockerfile.golang  Dockerfile.python  Dockerfile.ui  LICENCE.txt  LICENSE  README.md  REPRODUCTION.md  apply_vad_iterator.py  asr_base.py  common_args.py  docker-compose.yml  online_processor_interface.py  pyproject.toml  requirements.txt  requirements_canary.txt  requirements_translate.txt  requirements_whisper.txt  simul_whisper_backend.py  simul_whisper_demo.py  simul_whisper_online.py  simulstreaming_canary.py  simulstreaming_canary_server.py  simulstreaming_translate.py  simulstreaming_translate_server.py  simulstreaming_whisper.py  simulstreaming_whisper_server.py  whisper_online_server.py
.github/: pull_request_template.md
audio-segmenter/: go.mod  go.sum
audio-segmenter/cmd/main/: main.go
audio-segmenter/internal/server/: server.go
audio-segmenter/internal/stream/: stream.go
audio-segmenter/internal/worker/: worker.go
frontend/: package.json  server.js
frontend/public/: app.js  favorite.js  styles.css
mediamtx/: Dockerfile  mediamtx.yml
scripts/: start_ffmpeg_stream.sh
simul_whisper/: beam.py  config.py  simul_whisper.py  transcribe.py
simul_whisper/transcriber/: simul_whisper.py
simul_whisper/whisper/: model.py  triton_ops.py
simul_whisper/whisper/doc/: demo.py
simulstreaming/translate/: README.txt  hovercraft.py
simulstreaming/utils/: server_utils.py
simulstreaming/whisper/simul_whisper/: simul_whisper.py
simulstreaming/whisper/simul_whisper/whisper/assets/: .history-machacek
simulstreaming/whisper/whisper_streaming/: base.py  vac_online_processor.py  whisper_online_main.py  whisper_server.py
stream-registry/: Dockerfile  main.py
tests/: __init__.py  conftest.py  test_argument_parsing.py  test_base_classes.py  test_config.py  test_imports.py  test_reproduction.py  test_token_buffer.py  test_triton_fallback.py
tools/: apply_vad_iterator.py  replay-jsonl.py  replay-ts.py
translate/: line_packet.py  simulstreaming_translate.py  simulstreaming_translate_server.py
whisper-worker/: pyproject.toml
whisper-worker/whisper_worker/: __init__.py  audio_decode.py  contracts.py  gpu_whisper.py  main.py  main.py.back  simulstreaming_backend.py  simulstreaming_engine.py  worker.py
whisper-worker/whisper_worker/SimulStreaming/: README.md
whisper-worker/whisper_worker/SimulStreaming/simulstreaming/whisper/simul_whisper/whisper/: decoding.py  utils.py
whisper_streaming/: __init__.py  vac_online_processor.py  whisper_online_main.py  whisper_server.py
ws-captions/: go.mod
ws-captions/cmd/main/: main.go
ws-captions/internal/config/: config.go
ws-captions/internal/httpserver/: httpserver.go
ws-captions/internal/hub/: hub.go
ws-captions/internal/model/: model.go
ws-captions/internal/natsfanout/: natsfanout.go
