[project]
name = "whisper-worker"
version = "0.1.0"
description = ""
authors = [
    { name = "Alexandr Chechenev", email = "alexandeer038@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "numpy (<2.4)",
    "sounddevice (>=0.5.5,<0.6.0)",
    "soundfile (>=0.13.1,<0.14.0)",
    "transformers (>=5.1.0,<6.0.0)",
    "webrtcvad (>=2.0.10,<3.0.0)",
    "triton-rocm (==3.6.0)",
    "torch (==2.11.0+rocm7.2)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "omegaconf (>=2.3.0,<3.0.0)",
    "sentencepiece (>=0.2.1,<0.3.0)",
    "pyttsx3 (>=2.99,<3.0)",
    "scipy (>=1.17.0,<2.0.0)",
    "setuptools (<80.9)",
    "datasets (>=4.5.0,<5.0.0)",
    "torchcodec (>=0.10.0,<0.11.0)",
    "tiktoken (>=0.12.0,<0.13.0)",
    "numba (>=0.63.1,<0.64.0)",
    "librosa (>=0.11.0,<0.12.0)",
    "deepmultilingualpunctuation (>=1.0.1,<2.0.0)",
    "nats-py (>=2.14.0,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/rocm7.2"
priority = "explicit"

[tool.poetry.dependencies]
torch = {source = "pytorch-rocm"}
triton-rocm = {source = "pytorch-rocm"}
